@@ -36,6 +36,9 @@
    - markus@cvs.openbsd.org 2002/04/02 17:37:48
      [sftp.c]
      always call log_init()
+   - markus@cvs.openbsd.org 2002/04/02 20:11:38
+     [ssh-rsa.c]
+     ignore SSH_BUG_SIGBLOB for ssh-rsa; #187
 
 20020401
  - (stevesk) [monitor.c] PAM should work again; will *not* work with
@@ -8143,4 +8146,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.2018 2002/04/02 21:06:18 mouring Exp $
+$Id: ChangeLog,v 1.2019 2002/04/03 03:03:04 mouring Exp $
